cabal-version:      2.4
name:               3xplus1
version:            0.1.0.0
author:             FranckErnewein
maintainer:         franck.ernewein@gmail.com
extra-source-files: CHANGELOG.md
executable 3xplus1
  main-is:          Main.hs
  build-depends:    base ^>=4.16.4.0
  hs-source-dirs:   app
  default-language: Haskell2010
